<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android Engineer CodeCheck</string>
    <string name="searchInputText_hint">Search Query</string>
    <string name="github_repository_image_description">GitHub Repository Owner Image</string>
    <plurals name="github_stars" translatable="false">
        <item quantity="one">%d star</item>
        <item quantity="other">%d stars</item>
    </plurals>
    <plurals name="github_watchers" translatable="false">
        <item quantity="one">%d watcher</item>
        <item quantity="other">%d watchers</item>
    </plurals>
    <plurals name="github_forks" translatable="false">
        <item quantity="one">%d fork</item>
        <item quantity="other">%d forks</item>
    </plurals>
    <plurals name="github_open_issues" translatable="false">
        <item quantity="one">%d open issue</item>
        <item quantity="other">%d open issues</item>
    </plurals>
    <string name="error_title">An error has occurred</string>
    <string name="unknown_host_exception_error_description">Host resolution failed.\nPlease check your network connection</string>
    <string name="forbidden_error_description">Access denied.\nTry again after a while.</string>
    <string name="forbidden_error_description_with_time">Access denied.\nTry again after a while.\nAccess is denied until the next time.\n%s</string>
    <string name="validation_error_description">The search text is incorrect. Please review.</string>
    <string name="service_unavailable_error_description">The service is not provided by GitHub.</string>
    <string name="not_modified_error_description">It has not been updated since the previous one.</string>
    <string name="un_authorized_error_description">Authentication failed. Please check the token settings and expiration date.</string>

    <string name="response_code_prefix">Response Code: </string>
    <plurals name="repository_counts">
        <item quantity="one">%d repository</item>
        <item quantity="other">%d repositories</item>
    </plurals>
    <string name="error_display" translatable="false">%s(%s): %s</string>
    <string name="search_setting_open_floating_button_description">Open Search Settings</string>
    <string name="search_setting_title">Search Setting</string>
    <string name="re_search">Search</string>
    <string name="owner_name_input_hint">Owner Name</string>
    <string name="owner_name_input_helper_text">GitHub User Name or GitHub Organization Name</string>
    <string name="git_owner_type_user">User</string>
    <string name="git_owner_type_org">Organization</string>
    <string name="repository_language_input_hint">Repository language</string>
    <string name="sort_setting_title">Sort Setting</string>
    <string name="sort_best_match_and_default">Best Match(Default)</string>
    <string name="sort_stars">Stars</string>
    <string name="sort_forks">Forks</string>
    <string name="sort_help_wanted_issues" tools:ignore="UnusedResources">Help Wanted Issues</string>
    <string name="sort_updated">Updated</string>
    <string name="ascending_button_text">Ascending</string>
    <string name="descending_button_text">Descending</string>
    <string name="open_in_browser_title">Open in Browser</string>
    <string name="share_title">Share</string>
    <string name="authentication_title">Authentication</string>
    <string name="github_personal_access_token_hint" translatable="false">GitHub Personal Access Token</string>
    <string name="token_note">Authentication tokens can be obtained by pressing the following button.\nPlease note that since this application is created by a novice, security is not guaranteed.</string>
    <string name="token_input_helper">Adding token raises the API limit.</string>
    <string name="open_token_setting_text">Open the token acquisition page</string>
    <string name="save_button_text">Save</string>
    <string name="token_status_text">Status: %s</string>
    <string name="token_status_not_configured">Not Configured</string>
    <string name="token_status_configured">Configured</string>
    <string name="open_token_setting_title">Open Token Setting</string>
    <string name="user_label">User</string>
    <string name="organization_label">Organization</string>
    <string name="unknown_label">Unknown</string>
    <string name="github_user_icon_description" translatable="false">GitHub User Icon</string>
    <plurals name="follows">
        <item quantity="one">%d follow</item>
        <item quantity="other">%d follows</item>
    </plurals>
    <plurals name="followers">
        <item quantity="one">%d follower</item>
        <item quantity="other">%d followers</item>
    </plurals>


</resources>