<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="jp.co.yumemi.android.code_check.viewmodel.TokenSettingViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/token_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/authentication_title"
            android:textAppearance="?attr/textAppearanceHeadlineLarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/token_input_layout"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/github_personal_access_token_hint"
            app:endIconMode="clear_text"
            app:helperText="@string/token_input_helper"
            app:startIconDrawable="@drawable/key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/token_input_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@={viewModel.tokenInputText}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.tokenStatueText}"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                tools:text="Token State: Saved" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/token_save_button"
                style="@style/Widget.Material3.Button.TonalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.saveToken()}"
                android:text="@string/save_button_text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/token_note"
            android:textAppearance="?attr/textAppearanceBodyMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_token_setting_page"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/open_token_setting_text" />
    </LinearLayout>
</layout>